Added OAuth authentication. Updated documentation.
