# models/index.js
@@ -1,5 +1,7 @@
 const mongodb = require('../config/connect');
 const ObjectId = require('mongodb').ObjectId;
+const userCollection = "user";
+
 
 const getAllFromCollection = async (collection) => {
   const result = await mongodb.getDatabase().db().collection(collection).find();
@@ -37,10 +39,24 @@ const deleteDocumentInCollection = async (collection, id) => {
   return response;
 };
 
+const getGithubUser = async (id) => {
+  const result = await mongodb.getDatabase().db().collection(userCollection).findOne({ githubId: id });
+  return result;
+};
+
+const newGithubUser = async (data) => {
+  const response = await mongodb.getDatabase().db().collection(userCollection).insertOne(data);
+  return response;
+};
+
+
 module.exports = {
   getAllFromCollection,
   getSingleFromCollection,
   createDocumentInCollection,
   updateDocumentInCollection,
-  deleteDocumentInCollection
+  deleteDocumentInCollection,
+  userCollection,
+  getGithubUser,
+  newGithubUser
 };
